Change typo in mnb

--- a/multinomial-naive-bayes/mnb.ipynb
+++ b/multinomial-naive-bayes/mnb.ipynb
@@ -169,82 +169,17 @@
     "outputId": "3923126b-175c-4195-97b0-076a8ea3ce24",
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0                                      i didnt feel humili\n",
-       "1        i can go from feel so hopeless to so damn hope...\n",
-       "2              im grab a minut to post i feel greedi wrong\n",
-       "3        i am ever feel nostalg about the fireplac i wi...\n",
-       "4                                        i am feel grouchi\n",
-       "                               ...                        \n",
-       "15995    i just had a veri brief time in the beanbag an...\n",
-       "15996    i am now turn and i feel pathet that i am stil...\n",
-       "15997                        i feel strong and good overal\n",
-       "15998    i feel like this wa such a rude comment and im...\n",
-       "15999    i know a lot but i feel so stupid becaus i can...\n",
-       "Name: lemmatized, Length: 16000, dtype: object"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0       im feel quit sad and sorri for myself but ill ...\n",
-       "1       i feel like i am still look at a blank canva b...\n",
-       "2                             i feel like a faith servant\n",
-       "3                          i am just feel cranki and blue\n",
-       "4           i can have for a treat or if i am feel festiv\n",
-       "                              ...                        \n",
-       "1995    im have ssa examin tomorrow in the morn im qui...\n",
-       "1996    i constant worri about their fight against nat...\n",
-       "1997    i feel it import to share this info for those ...\n",
-       "1998    i truli feel that if you are passion enough ab...\n",
-       "1999    i feel like i just wan na buy ani cute make up...\n",
-       "Name: lemmatized, Length: 2000, dtype: object"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0       im feel rather rotten so im not veri ambiti ri...\n",
-       "1                   im updat my blog becaus i feel shitti\n",
-       "2       i never make her separ from me becaus i don t ...\n",
-       "3       i left with my bouquet of red and yellow tulip...\n",
-       "4              i wa feel a littl vain when i did this one\n",
-       "                              ...                        \n",
-       "1995    i just keep feel like someon is be unkind to m...\n",
-       "1996    im feel a littl cranki negat after this doctor...\n",
-       "1997    i feel that i am use to my peopl and that give...\n",
-       "1998    im feel more comfort with derbi i feel a thoug...\n",
-       "1999    i feel all weird when i have to meet w peopl i...\n",
-       "Name: lemmatized, Length: 2000, dtype: object"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "stemmer = SnowballStemmer(\"english\")\n",
-    "train_df['lemmatized'] = train_df.lemmatized.map(lambda l: [stemmer.stem(word) for word in l])\n",
-    "train_df.lemmatized = train_df.lemmatized.str.join(sep=' ')\n",
+    "train_df['stemmed'] = train_df.lemmatized.map(lambda l: [stemmer.stem(word) for word in l])\n",
+    "train_df.stemmed = train_df.stemmed.str.join(sep=' ')\n",
     "\n",
-    "val_df['lemmatized'] = val_df.lemmatized.map(lambda l: [stemmer.stem(word) for word in l])\n",
-    "val_df.lemmatized = val_df.lemmatized.str.join(sep=' ')\n",
+    "val_df['stemmed'] = val_df.lemmatized.map(lambda l: [stemmer.stem(word) for word in l])\n",
+    "val_df.stemmed = val_df.stemmed.str.join(sep=' ')\n",
     "\n",
-    "test_df['lemmatized'] = test_df.lemmatized.map(lambda l: [stemmer.stem(word) for word in l])\n",
-    "test_df.lemmatized = test_df.lemmatized.str.join(sep=' ')\n",
-    "\n",
-    "display(train_df[\"lemmatized\"])\n",
-    "display(val_df[\"lemmatized\"])\n",
-    "display(test_df[\"lemmatized\"])"
+    "test_df['stemmed'] = test_df.lemmatized.map(lambda l: [stemmer.stem(word) for word in l])\n",
+    "test_df.stemmed = test_df.stemmed.str.join(sep=' ')"
    ]
   },
   {
@@ -302,9 +237,9 @@
    ],
    "source": [
     "cv = CountVectorizer(stop_words='english')\n",
-    "train_ppd_df = cv.fit_transform(train_df[\"lemmatized\"])\n",
-    "val_ppd_df = cv.transform(val_df[\"lemmatized\"])\n",
-    "test_ppd_df = cv.transform(test_df[\"lemmatized\"])\n",
+    "train_ppd_df = cv.fit_transform(train_df[\"stemmed\"])\n",
+    "val_ppd_df = cv.transform(val_df[\"stemmed\"])\n",
+    "test_ppd_df = cv.transform(test_df[\"stemmed\"])\n",
     "\n",
     "\n",
     "display(train_ppd_df)\n",
