gamma and accuracy change

--- a/support vector machine/svm.ipynb
+++ b/support vector machine/svm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,39 +166,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SVM = svm.SVC(C=1.0, kernel='rbf', degree=3, gamma=2**1)\n",
+    "SVM = svm.SVC(C=1.0, kernel='rbf', degree=3, gamma=0.6)\n",
     "SVM.fit(train_X_Tfidf, train_labels)\n",
     "predictions = SVM.predict(test_X_Tfidf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Score ->  76.25\n"
+      "Accuracy Score ->  87.25\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[525,  48,   0,   5,   3,   0],\n",
-       "       [ 11, 675,   7,   0,   1,   1],\n",
-       "       [ 17,  97,  43,   2,   0,   0],\n",
-       "       [ 46,  83,   0, 145,   1,   0],\n",
-       "       [ 39,  56,   0,   5, 124,   0],\n",
-       "       [ 10,  29,   0,   0,  14,  13]], dtype=int64)"
+       "array([[538,  19,   2,  13,   7,   2],\n",
+       "       [  6, 670,   9,   2,   5,   3],\n",
+       "       [  5,  59,  94,   1,   0,   0],\n",
+       "       [ 20,  19,   0, 232,   4,   0],\n",
+       "       [ 19,  14,   0,   9, 181,   1],\n",
+       "       [  2,  16,   0,   0,  18,  30]], dtype=int64)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
